# socket_stream_lib

./: .gitignore  CMakeLists.txt  README.md
include/: _filedesc_config.h  base_client.h  base_server.h  filedesc.h  socket.h  tcp_socket.h
src/: base_client.cpp  base_server.cpp  main.cpp  socket.cpp
